syntax = "proto3";



message OnConnect2CentrePbEvent
{
  uint64 entity = 1;
}

message OnConnect2Login
{
  uint64 entity = 1;
}

message OnServerStart
{
}